// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SceneHierarchyTreeItem should bubble up when expanded 1`] = `
<div>
  <li
    acceptdrop="ModelRef,Camera,Light,Tag,ModelShader,MotionIndicator,Space,default"
    class="tm-tree-item"
    data="[object Object]"
    datatype="modelRef"
    role="treeitem"
  >
    <div
      aria-selected="true"
      class="tm-tree-item-inner selected"
    >
      <div
        data-mocked="Checkbox"
      >
        <span
          class="tm-scene-node-label"
        >
          <p
            class="tm-scene-node-label-inner"
          >
            Label 1
          </p>
          <span
            class="actions"
          >
            <div
              class="tm-visibility-toggle visible tm-icon-button"
              data-mocked="Button"
              variant="inline-icon"
            >
              <div>
                <svg
                  fill="none"
                  height="14"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#show_svg__a)"
                    fill="#879596"
                  >
                    <path
                      class="show_svg__center-dot"
                      d="M8 8.89a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                      stroke="#879596"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M7.85 3c2.27 0 4.57 1.31 6.85 3.9-1.07 1.22-3.77 3.88-7 3.88-2.25 0-4.42-1.31-6.46-3.9C2.16 5.69 4.61 3 7.85 3Zm0-1C3.11 2 0 6.89 0 6.89c2.67 3.67 5.33 4.89 7.7 4.89 4.74 0 8.3-4.89 8.3-4.89C13 3.22 10.22 2 7.85 2Z"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="show_svg__a"
                    >
                      <path
                        d="M0 0h16v9.78H0z"
                        fill="#fff"
                        transform="translate(0 2)"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </div>
          </span>
        </span>
      </div>
    </div>
    <ol
      acceptdrop="ModelRef,Camera,Light,Tag,ModelShader,MotionIndicator,Space,default"
      class="tm-tree"
      role="tree"
    />
  </li>
</div>
`;

exports[`SceneHierarchyTreeItem should render SubModelTree when item has a model, and not in view mode 1`] = `
<div>
  <li
    acceptdrop="ModelRef,Camera,Light,Tag,ModelShader,MotionIndicator,Space,default"
    class="tm-tree-item"
    data="[object Object]"
    datatype="ModelRef"
    role="treeitem"
  >
    <div
      aria-selected="true"
      class="tm-tree-item-inner selected"
    >
      <div
        data-mocked="Checkbox"
      >
        <span
          class="tm-scene-node-label"
        >
          <div
            data-mocked="Icon"
          >
            <div>
              <svg
                fill="none"
                height="14"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#modelref_svg__a)"
                  stroke="currentColor"
                  stroke-miterlimit="10"
                >
                  <path
                    d="M6.946 13.48.465 10.24V3.758L6.946.518l6.482 3.24v6.482l-6.482 3.24Z"
                  />
                  <path
                    d="M.465 3.76 6.946 7l6.482-3.24M6.945 7v6.482"
                  />
                </g>
                <defs>
                  <clippath
                    id="modelref_svg__a"
                  >
                    <path
                      d="M0 0h13.889v14H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </div>
          </div>
          <p
            class="tm-scene-node-label-inner"
          >
            Label 1
          </p>
          <span
            class="actions"
          >
            <div
              class="tm-visibility-toggle visible tm-icon-button"
              data-mocked="Button"
              variant="inline-icon"
            >
              <div>
                <svg
                  fill="none"
                  height="14"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#show_svg__a)"
                    fill="#879596"
                  >
                    <path
                      class="show_svg__center-dot"
                      d="M8 8.89a2 2 0 1 0 0-4 2 2 0 0 0 0 4Z"
                      stroke="#879596"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M7.85 3c2.27 0 4.57 1.31 6.85 3.9-1.07 1.22-3.77 3.88-7 3.88-2.25 0-4.42-1.31-6.46-3.9C2.16 5.69 4.61 3 7.85 3Zm0-1C3.11 2 0 6.89 0 6.89c2.67 3.67 5.33 4.89 7.7 4.89 4.74 0 8.3-4.89 8.3-4.89C13 3.22 10.22 2 7.85 2Z"
                    />
                  </g>
                  <defs>
                    <clippath
                      id="show_svg__a"
                    >
                      <path
                        d="M0 0h16v9.78H0z"
                        fill="#fff"
                        transform="translate(0 2)"
                      />
                    </clippath>
                  </defs>
                </svg>
              </div>
            </div>
          </span>
        </span>
      </div>
    </div>
    <ol
      acceptdrop="ModelRef,Camera,Light,Tag,ModelShader,MotionIndicator,Space,default"
      class="tm-tree"
      role="tree"
    >
      <div
        data-mocked="SubModelTree"
        object3d="[object Object]"
        parentref="1"
      />
    </ol>
  </li>
</div>
`;
